Kllama cli should use SIMD vector API